<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FPS</string>
    <string name="language">Language</string>
    <string name="publicUrl">Change URL </string>
    <string name="unassociated">Device is Unassociated to any Store</string>
    <string name="fpsposapplication">FPS POS APPLICATION</string>
    <string name="errorUpgrade">Error in Upgrade.Contact Helpdesk</string>
    <string name="contact_helpdesk">Please contact helpdesk.</string>
    <string name="device_details">Device Details</string>
    <string name="inactiveDevice">Device is Inactive</string>
    <string name="tamil">தமிழ்</string>
    <string name="hindi">हिन्दी</string>
    <string name="sync">Sync</string>
    <string name="correction_history_tv">Stock Adjustment</string>
    <string name="stock_adjust_list_history">Stock Adjustment History</string>
    <string name="languageSelection">Select Language</string>
    <string name="aadharNumberZero">Aadhaar number should not start with 0</string>
    <string name="aadharNumberOne">Aadhaar number should not start with 1</string>
    <string name="mobileNumberZero">Mobile number should not start with 0</string>
    <string name="checksumValidationFail">Checksum Validation Failed. Enter Valid Aadhar Number.</string>
    <string name="noFpsAadharNumber">Given Aadhaar number is not registered in this Fps</string>
    <string name="languageSelectionTa">மொழித் தேர்வு</string>
    <string name="languageSelectionHi">भाषा चुनिए</string>
    <string name="menuStore">Restore</string>
    <string name="menuRetrieve">Backup</string>
    <string name="enter_ration">Enter Ration Card Number</string>
    <string name="number_cylinder">Cylinder</string>
    <string name="number_adult">Adults</string>
    <string name="number_children">Children</string>
    <string name="loadLocalDB">Load Local DB</string>
    <string name="english">English</string>
    <string name="hr">hr</string>
    <string name="hrs">hrs</string>
    <string name="min">min</string>
    <string name="mins">mins</string>
    <string name="noComodity">No Commodity for this card</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="transit">Transit</string>
    <string name="accepted">Approved</string>
    <string name="sales">Continue</string>
    <string name="syncButton">Ready</string>
    <string name="card_activation">Activation</string>
    <string name="card_registration">Card Registration</string>
    <string name="card_registration_confirm">Card Registration</string>
    <string name="check_details">Check details of Card Holder</string>
    <string name="normal_check_details">Check details of Ration Card Holder</string>
    <string name="stock_management">Stock Management</string>
    <string name="transactions">Transactions</string>
    <string name="close_sale">Close Sale</string>
    <string name="close_sale_summary">Close Sale Summary</string>
    <string name="close_sale_on">Close Sale on</string>
    <string name="total_bill">Total Bills</string>
    <string name="totAmount">Total Amount</string>
    <string name="other_menus">Miscellaneous</string>
    <string name="updateRationCard">Mobile / Aadhar Entry</string>
    <string name="aadhar_mobile_success">Mobile number and Aadhaar has been added with Card</string>
    <string name="no_change">No Information to Update.</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="relationship">Relationship</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="openstock_name">OpenStock Name</string>
    <string name="card_activation_success">Ration Card Activated Successfully</string>
    <string name="oap_anp_card_activation_success">OAP/ANP Card Activated Successfully</string>
    <string name="oap_anp_activation_success">OAP/ANP Card Activated Successfully</string>
    <string name="ration_card_number">CARD NUMBER</string>
    <string name="normal_ration_card_number">RATIONCARD NUMBER</string>
    <string name="select_ration_card_number">SELECT RATION CARD NUMBER</string>
    <string name="select_all_products">Acknowledge all Products</string>
    <string name="invalid_card_prefix">Enter correct district code</string>
    <string name="card_number_input">Enter last 4 digit </string>
    <string name="invalid_card_type_pre">Enter Valid Letter</string>
    <string name="mob_number">MOBILE NUMBER</string>
    <string name="aRegisterNo">A-Register Number</string>
    <string name="card_activation_failed">Card Activation Failed.Please Try Again</string>
    <string name="welcome_view">Welcome</string>
    <string name="last_login">Last Login :</string>
    <string name="logout">Logout</string>
    <string name="fps_profile">FPS Profile</string>
    <string name="user_name">User Name : </string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="enter_mobile">ENTER MOBILE NUMBER</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="captured_image">Image</string>
    <string name="enter_mobile_no">Enter 10 digit mobile number</string>
    <string name="fps_code">FPS Code  </string>
    <string name="sales_order">Sale Order</string>
    <string name="sales_top_heading">SALES</string>
    <string name="mobile_otp">Mobile OTP</string>
    <string name="success_activation">Card Activation Status</string>
    <string name="success_status">Success/Failure Status</string>
    <string name="sale_entry_activity">Sales Order - Entry</string>
    <string name="card_user_details">Card Details</string>
    <string name="sale_confirm_activity">Sales Order - Confirm</string>
    <string name="full_entitlements">Full Entitlement</string>
    <string name="commodity">Commodity</string>
    <string name="entitled_qty">Entitled Qty.</string>
    <string name="purchased_qty">Alr. Purc. Qty</string>
    <string name="availed_qty">Avail.Qty</string>
    <string name="qty_to_bill">Qty.to Bill</string>
    <string name="i_need_otp">I Need OTP</string>
    <string name="i_have_otp">I Have OTP</string>
    <string name="request_otp">Request OTP</string>
    <string name="qr_based">QR Code Based</string>
    <string name="otp_based">OTP Based</string>
    <string name="ration_based">Ration Card Based</string>
    <string name="aadhar_based">Aadhar Card Based</string>
    <string name="biometric_based">Biometric Based</string>
    <string name="full">Full</string>
    <string name="printBill">Print</string>
    <string name="rate">Rate(\u20B9)</string>
    <string name="purge">Purge</string>
    <string name="unsyncBills">Unsynched Bills</string>
    <string name="syncBills">Sync Bills</string>
    <string name="noteBillViewDate"> Unsynched Bills </string>
    <string name="printerSettings">Printer Settings</string>
    <string name="internalError">Internal Error</string>
    <string name="successInUpdate">Location Updated Successfully</string>
    <string name="crashmsg">Temporarily Service stopped</string>
    <string name="technicalFault">session timeout. Please try again or contact helpdesk</string>
    <string name="noMembers">No members in this family</string>
    <string name="otpMessage">OTP generated and messaged to RMN</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="caution">Caution</string>
    <string name="bill_search">Bill Search</string>
    <string name="monthly_sales_summary">Sales Summary</string>
    <string name="monthly_inventory_summary">Stock Status Summary</string>
    <string name="members_aadhar_registration">Members Aadhar Registration</string>
    <string name="bfd">Best Finger Detection</string>
    <string name="bfd_already_done">BFD Registered</string>
    <string name="bfd_not_done">BFD not registered</string>
    <string name="choose_finger">Choose The Finger</string>
    <string name="reg_aadhar_numbers">Registered Aadhar Numbers</string>
    <string name="search">Search</string>
    <string name="loginBack">Are you sure you want to close the sale for the day ? </string>
    <string name="geofence_reason">You are away from the shop</string>
    <string name="geofence_done">the device has been blocked</string>
    <string name="timeDiff">Time difference between server and device </string>
    <string name="nextDay">next day</string>
    <string name="location">Location</string>
    <string name="warning">Warning</string>
    <string name="stock_inward_alert_msg">Your stock request has been approved and is dispatched. The stock is on transit to the FPS.</string>
    <string name="stock_adjust_alert_msg">Stock adjustments are created</string>
    <string name="out_of_stock_alert_msg">Stock for the below products are unavailable. Full entitlement is impossible.</string>
    <string name="store_type">Store Type</string>
    <string name="adjustment_type">Adjustment Type</string>
    <string name="fps_code1">FPS Code</string>
    <string name="inward_register">Stock Inward Register</string>
    <string name="advance_stock_history">Advance Stock History</string>
    <string name="inward_list">Stock Inward List</string>
    <string name="working_hours">Working Hours</string>
    <string name="invalid_qr">Invalid QR code</string>
    <string name="qr_exists">QR Code does not exist</string>
    <string name="date_validation">From date is greater than To date</string>
    <string name="mobile_exists">Mobile number does not exist</string>
    <string name="ration_exists">Ration Card number does not exist</string>
    <string name="ration_empty">Enter Ration Card Number</string>
    <string name="sim_number">Sim Number</string>
    <string name="agency_name">Agency Name</string>
    <string name="stock_increment">Increment</string>
    <string name="stock_decrement">Decrement</string>
    <string name="invalid_ration">Invalid Ration Card Number</string>
    <string name="card_no">Card Number</string>
    <string name="FpsStockInward">Stock Inward</string>
    <string name="inOutBalance">Close Sale</string>
    <string name="stockCheck">Stock Report</string>
    <string name="reference_no">Reference No.</string>
    <string name="godown_reference_no">Godown Ref. No.</string>
    <string name="status">Status</string>
    <string name="autoUpgrade">Auto Upgrade Version</string>
    <string name="fpsProductIntentRequest">Manual Indent Request</string>
    <string name="stockAdjustment">Stock Adjustment</string>
    <string name="fpsViewBill">View Bill</string>
    <string name="dispatch_date">Dispatch Date</string>
    <string name="gowdown_code">Godown Code</string>
    <string name="sno">S.No.</string>
    <string name="reconciliation_status">Reconciliation status</string>
    <string name="reconciliation_success">Your stock has been reconciled</string>
    <string name="req_date_time">Request date</string>
    <string name="resp_date_time">Response date</string>
    <string name="req_data">Request</string>
    <string name="resp_data">Response</string>
    <string name="error_desc">Error description</string>
    <string name="service_type">Service type</string>
    <string name="remarks">Remarks</string>
    <string name="ack_shop_code">Shop code</string>
    <string name="system_stock">Current stock</string>
    <string name="physical_stock">Observed stock</string>
    <string name="variance">Variance</string>
    <string name="bill_number">Bill Number</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="txt_quantity">Quantity</string>
    <string name="title_product">Product</string>
    <string name="ok">OK</string>
    <string name="unit_rate">Unit Price (\u20B9)</string>
    <string name="tg_unit">Unit</string>
    <string name="item_quanity">Item</string>
    <string name="total_rate">Total Price (\u20B9)</string>
    <string name="purchace_qty">Purchased Qty</string>
</resources>