<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linear_header"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/ash"
              android:orientation="horizontal"
              android:padding="3dp">

    <TextView
        android:id="@+id/txt_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.18"
        android:gravity="center"
        android:text="@string/sno"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.05"
        android:gravity="center"
        android:text="@string/bill_number"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.05"
        android:gravity="center"
        android:text="@string/card_no"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title_product"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.12"
        android:gravity="center"
        android:text="@string/system_stock"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.10"
        android:gravity="center"
        android:text="@string/physical_stock"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.10"
        android:gravity="center"
        android:text="@string/variance"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.10"
        android:gravity="center"
        android:text="@string/remarks"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>
