<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/ash"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.20"
            android:gravity="center"
            android:text="#"
            android:textColor="@color/white"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".90"
            android:gravity="center"
            android:text="@string/reference_no"
            android:textColor="@color/white"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".90"
            android:background="@color/ash"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dispatch_date"
            android:textColor="@color/white"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gowdown_code"
            android:textColor="@color/white"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/elapsed_time"
            android:textColor="@color/white"></TextView>
    </LinearLayout>
</LinearLayout>