<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="450dp"
    android:layout_height="250dp"
    android:layout_margin="60dp"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/textViewNwTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="15dp"
        android:src="@drawable/icon_green_tick"
        android:gravity="center"
        android:text="@string/reconciliation_status"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewNwText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reconciliation_success"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/buttonNwOk"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textSize="22dp"
        android:background="@color/mediumseagreen"
        android:textColor="@color/white"
        android:text="@string/ok" />



</LinearLayout>