<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rationLayout"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_bottom_list"
            android:gravity="center">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_quanity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_bottom_list"
            android:gravity="center">

            <TextView
                android:id="@+id/purchased_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchace_qty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_bottom_list"
            android:gravity="center">

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tg_unit" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_bottom_list"
            android:gravity="center">

            <TextView
                android:id="@+id/unit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_rate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_bottom_list"
            android:gravity="center">

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_rate" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>