<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linear_header"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/ash"
              android:orientation="horizontal"
              android:padding="10dp"
              android:weightSum="3">

    <TextView
        android:id="@+id/txt_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.3"
        android:gravity="center"
        android:text="@string/sno"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/ack_shop_code"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight=".50"
        android:gravity="center"
        android:text="@string/remarks"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>
