<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/topLayout"
        layout="@layout/layout_top_layout_other"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_marginLeft="10dp"
        android:layout_above="@id/bottom_layout"
        android:fillViewport="true"
        android:layout_below="@id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/middleLayout"
        android:layout_above="@id/bottom_layout"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/topLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/requestLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/req_data"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/requestTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424141"
            android:text=""
             />

        <TextView
            android:id="@+id/responseLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/resp_data"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/responseTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424141"
            android:text=""
             />

        <TextView
            android:id="@+id/requestDateLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/req_date_time"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/requestDateTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424141"
            android:text=""
             />

        <TextView
            android:id="@+id/responseDateLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/resp_date_time"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/responseDateTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424141"
            android:text=""
             />

        <TextView
            android:id="@+id/errorDescriptionLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/error_desc"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/errorDescriptionTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424141"
            android:text=""
             />

        <TextView
            android:id="@+id/serviceTypeLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/service_type"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/serviceTypeTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424141"
            android:text=""
             />

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/status"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statusTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#424141"
            android:text=""
             />



    </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/bottom_layout"
        layout="@layout/user_bottom_other_screen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
